# gru-connect-analytics

./: .gitignore  .ruff.toml  pyproject.toml  readme.md
dags/: dag_gru_connect.py
dbt_gru/: .user.yml  dbt_project.yml  profiles.yml
dbt_gru/models/marts/: dim_aeroportos.sql  dim_calendario.sql  dim_empresas.sql  fato_conexoes.sql
dbt_gru/models/staging/: stg_anac_vra.sql
spark_jobs/: ingestion_vra.py  inspect_gold.py  silver_transformation.py
